back추가, 라우터 설정

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -17,6 +17,8 @@
       "@components/*": ["./src/components/*"],
       "@styles/*": ["./src/styles/*"],
       "@stores/*": ["./src/stores/*"],
+      "@layouts/*": ["./src/layouts/*"],
+      "@pages/*": ["./src/pages/*"],
       "@router/*": ["./src/router/*"]
     }
   },
