--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@types/gravatar": "^1.8.6",
     "@vueuse/core": "^13.3.0",
     "axios": "^1.9.0",
+    "gravatar": "^1.8.2",
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.3.0",
     "vue": "^3.5.13",
