--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,15 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@tresjs/core": "^4.3.6",
     "@types/gravatar": "^1.8.6",
+    "@types/three": "^0.177.0",
     "@vueuse/core": "^13.3.0",
     "axios": "^1.9.0",
     "gravatar": "^1.8.2",
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.3.0",
+    "three": "^0.177.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
