--- a/client/package.json
+++ b/client/package.json
@@ -19,12 +19,14 @@
     "gravatar": "^1.8.2",
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.3.0",
+    "socket.io-client": "^4.8.1",
     "three": "^0.177.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.15.29",
+    "@types/socket.io-client": "^1.4.36",
     "@types/three": "^0.177.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
