--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@tresjs/cientos": "^4.3.1",
     "@tresjs/core": "^4.3.6",
     "@types/gravatar": "^1.8.6",
     "@vueuse/core": "^13.3.0",
